--- a/DiagTool_Kanwairen/DiagTool_Kanwairen.csproj
+++ b/DiagTool_Kanwairen/DiagTool_Kanwairen.csproj
@@ -62,7 +62,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Diag.cs" />
+    <Compile Include="DiagUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="DiagUserControl.Designer.cs">
+      <DependentUpon>DiagUserControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DiagUserControlCallback.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Dll.cs" />
+    <Compile Include="FlashUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="FlashUserControl.Designer.cs">
+      <DependentUpon>FlashUserControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="ImportForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -75,14 +90,28 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="MainFormCallBack.cs">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="PassThruWrapper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Setup.cs" />
-    <Compile Include="State.cs" />
+    <Compile Include="SetupForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SetupForm.Designer.cs">
+      <DependentUpon>SetupForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Global.cs" />
+    <Compile Include="TxPanelForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TxPanelForm.Designer.cs">
+      <DependentUpon>TxPanelForm.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="DiagUserControl.resx">
+      <DependentUpon>DiagUserControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FlashUserControl.resx">
+      <DependentUpon>FlashUserControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ImportForm.resx">
       <DependentUpon>ImportForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -99,6 +128,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SetupForm.resx">
+      <DependentUpon>SetupForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TxPanelForm.resx">
+      <DependentUpon>TxPanelForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\DataSources\Diag.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
