--- a/DiagTool_Kanwairen/DiagTool_Kanwairen.csproj
+++ b/DiagTool_Kanwairen/DiagTool_Kanwairen.csproj
@@ -127,6 +127,12 @@
       <DependentUpon>SetupForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Global.cs" />
+    <Compile Include="ToASCIIForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ToASCIIForm.Designer.cs">
+      <DependentUpon>ToASCIIForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="TxPanelForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -157,6 +163,9 @@
     </Compile>
     <EmbeddedResource Include="SetupForm.resx">
       <DependentUpon>SetupForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ToASCIIForm.resx">
+      <DependentUpon>ToASCIIForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="TxPanelForm.resx">
       <DependentUpon>TxPanelForm.cs</DependentUpon>
