--- a/DiagTool_Kanwairen/DiagTool_Kanwairen.csproj
+++ b/DiagTool_Kanwairen/DiagTool_Kanwairen.csproj
@@ -77,6 +77,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.ServiceProcess" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -117,6 +118,12 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="MMTimer.cs" />
+    <Compile Include="NRCTableForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NRCTableForm.Designer.cs">
+      <DependentUpon>NRCTableForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="PassThruWrapper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -150,6 +157,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NRCTableForm.resx">
+      <DependentUpon>NRCTableForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
