--- a/DiagTool_Kanwairen/DiagTool_Kanwairen.csproj
+++ b/DiagTool_Kanwairen/DiagTool_Kanwairen.csproj
@@ -133,6 +133,12 @@
     <Compile Include="PassThruWrapper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadDTCForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ReadDTCForm.Designer.cs">
+      <DependentUpon>ReadDTCForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ScriptForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -186,6 +192,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ReadDTCForm.resx">
+      <DependentUpon>ReadDTCForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ScriptForm.resx">
       <DependentUpon>ScriptForm.cs</DependentUpon>
     </EmbeddedResource>
