--- a/DiagTool_Luffy/DiagTool_Luffy.csproj
+++ b/DiagTool_Luffy/DiagTool_Luffy.csproj
@@ -48,7 +48,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Luffy.ico</ApplicationIcon>
+    <ApplicationIcon>Luffy1.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -173,6 +173,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Luffy.ico" />
+    <Content Include="Luffy1.ico" />
+    <Content Include="Luffy1616.ico" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
