1, modify queue.cs queue writepointer and readpointer type from byte to int; 2. add stack.cs

--- a/DiagTool_Luffy/DiagTool_Luffy.csproj
+++ b/DiagTool_Luffy/DiagTool_Luffy.csproj
@@ -131,6 +131,7 @@
     <Compile Include="SettingForm.Designer.cs">
       <DependentUpon>SettingForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Stack.cs" />
     <EmbeddedResource Include="AboutForm.resx">
       <DependentUpon>AboutForm.cs</DependentUpon>
     </EmbeddedResource>
